
-Revised default config, including semantics for UX

-Misc. UX / bugfixes

-------------------------------------------------------------------



-------------------------------------------------------------------
4.22.2:

-Bug fix for app error alerts drop-down window positioning

-Bug fix for visual / audio alerts toggle (on settings page)

-Bug fix for extra whitespace at beginning of CSV spreadsheet export files

-"Crypto Value" of your entire portfolio in selected cryptocurrencies (on settings / portfolio pages)

-Less-cluttered portfolio summary area (at bottom of portfolio page)

-Code / documentation / content revisions and cleanup

-Misc. UX improvements / bug fixes

-------------------------------------------------------------------



-------------------------------------------------------------------
4.23.0:

-Asset Performance Comparision chart, to catch the best trends ove a user-defined time period for all assets

-Revised default config

-------------------------------------------------------------------



-------------------------------------------------------------------
4.23.1:

-Bug fixes for new Asset Performance Comparision chart (same last values overwrite, 0.00% start, small screen compatibility)

-Better UX for new Asset Performance Comparision chart (start time offset, based on browser time zone)

-Bug fix for System Stats chart (same last values overwrite)

-Better UX for SUPER HIGH VALUE system chart sensor anomalies (vertical axis scale kept in check, now adjustable in Admin Config POWER USER section)

-Misc UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.23.2:

-Minor bug fixes for the Asset Performance Comparision chart rendering

-Time period setting for the Asset Performance Comparision chart

-Misc. bug fixes / UX improvements / optimizations

-------------------------------------------------------------------











